<resources>
    <string name="app_name">CollapsingToolbar</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    action_settings
    <string name="coordinatar_card">Coordinator Layout</string>
    <string name="coordinatar_card_desc">The Design library introduces CoordinatorLayout, a layout which provides an additional level of control over touch events between child views, something which many of the components in the Design library take advantage of.</string>
    <string name="appBarLayout_card">AppBarLayout</string>
    <string name="appBarLayout_card_desc">AppBarLayout allows your Toolbar and other views (such as tabs provided by TabLayout) to react to scroll events in a sibling view marked with a ScrollingViewBehavior. Now, as the user scrolls, the AppBarLayout can respond to those events by using the children’s scroll flags to control how they enter (scroll on screen) and exit (scroll off screen)</string>
    <string name="collapsing_toolbar_card">Collapsing Toolbar</string>
    <string name="collapsing_toolbar_card_desc">Adding a Toolbar directly to an AppBarLayout gives you access to the enterAlwaysCollapsed and exitUntilCollapsed scroll flags, but not the detailed control on how different elements react to collapsing. For that, you can use CollapsingToolbarLayout.</string>


</resources>
